| Bug #8585 | ndb_cache2 fails on aix52 | ||
|---|---|---|---|
| Submitted: | 17 Feb 2005 18:48 | Modified: | 11 Apr 2005 4:00 |
| Reporter: | Tomas Ulin | ||
| Status: | Closed | ||
| Category: | Server: Cluster | Severity: | S2 (Serious) |
| Version: | 5.0.4 | OS: | Linux (Linux + Solaris) |
| Assigned to: | Magnus Blaudd | Target Version: | |
[17 Feb 2005 18:48]
Tomas Ulin
[18 Feb 2005 13:33]
Magnus Blaudd
Pushed to mysql-5.0
[15 Mar 2005 14:54]
Joerg Bruehe
Issue still occurs in build based on ChangeSet
1.1806 05/03/13 01:07:01 igor@rurik.mysql.com +1 -0
join_outer.test:
Correction after manual merge.
AIX52 did not build in that snapshot, but this issue occurs on
- ita2 (ia64, Linux) in default mode only, PS test passes;
- sunfire100b (Solaris 9, both 32 and 64 bit) in PS mode only, default test passes;
- sunfire100c (Solaris 8) in 64 bit only, both test modes; 32 bit passes.
Tree saved on ita2 in directory bug8585.
[15 Mar 2005 16:51]
Magnus Blaudd
I have now pushed a fix for this that makes ndb_cache2 NOT timing dependent, this should fix this problem.
[22 Mar 2005 17:22]
Magnus Blaudd
https://intranet.mysql.com/~kboortz/status/mysql-5.0.3-alpha/logs/bsd53-5.0-max.log.html>> 10762: ndb_cache2 [ fail ] 10763: 10764: Errors are (from /usr/home/mysqldev/bsd53/test/mysql-max-5.0.3-alpha-unknown-freebsd5.3-i386/mysql-test/var /log/mysqltest-time) : 10765: /usr/home/mysqldev/bsd53/test/mysql-max-5.0.3-alpha-unknown-freebsd5.3-i386/bin/mysqltest: At line 361: Result content mismatch 10766: (the last lines may be the most important ones) 10767: Below are the diffs between actual and expected results: 10768: ------------------------------------------------------- 10769: *** r/ndb_cache2.result Mon Mar 21 01:35:31 2005 10770: --- r/ndb_cache2.reject Mon Mar 21 18:08:23 2005 10771: *************** 10772: *** 122,128 **** 10773: 1 3 3 First row 10774: show status like "Qcache_hits"; 10775: Variable_name Value 10776: ! Qcache_hits 4 10777: update t1 set a1=4 where b1=3; 10778: use test; 10779: show status like "Qcache_queries_in_cache"; 10780: --- 122,128 ---- 10781: 1 3 3 First row 10782: show status like "Qcache_hits"; 10783: Variable_name Value 10784: ! Qcache_hits 3 10785: update t1 set a1=4 where b1=3; 10786: use test; 10787: show status like "Qcache_queries_in_cache"; 10788: *************** 10789: *** 138,147 **** 10790: 1 4 3 First row 10791: show status like "Qcache_inserts"; 10792: Variable_name Value 10793: ! Qcache_inserts 7 10794: show status like "Qcache_hits"; 10795: Variable_name Value 10796: ! Qcache_hits 5 10797: select * from t1 order by pk desc; 10798: pk a1 b1 c1 10799: 2 7 8 Second row 10800: --- 138,147 ---- 10801: 1 4 3 First row 10802: show status like "Qcache_inserts"; 10803: Variable_name Value 10804: ! Qcache_inserts 8 10805: show status like "Qcache_hits"; 10806: Variable_name Value 10807: ! Qcache_hits 4 10808: select * from t1 order by pk desc; 10809: pk a1 b1 c1 10810: 2 7 8 Second row 10811: *************** 10812: *** 155,164 **** 10813: Qcache_queries_in_cache 1 10814: show status like "Qcache_inserts"; 10815: Variable_name Value 10816: ! Qcache_inserts 7 10817: show status like "Qcache_hits"; 10818: Variable_name Value 10819: ! Qcache_hits 7 10820: select * from t2; 10821: pk a2 b2 10822: 1 2 3 10823: --- 155,164 ---- 10824: Qcache_queries_in_cache 1 10825: show status like "Qcache_inserts"; 10826: Variable_name Value 10827: ! Qcache_inserts 8 10828: show status like "Qcache_hits"; 10829: Variable_name Value 10830: ! Qcache_hits 6 10831: select * from t2; 10832: pk a2 b2 10833: 1 2 3 10834: ------------------------------------------------------- 10835: Please follow the instructions outlined at 10836: http://www.mysql.com/doc/en/Reporting_mysqltest_bugs.html 10837: to find the reason to this problem and how to report this. 10838: 10839: 10840: Ending Tests 10841: Shutting-down MySQL daemon
[31 Mar 2005 14:34]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/internals/23526
[7 Apr 2005 10:54]
Magnus Blaudd
Commit count cache was not properly invalidated when deleting a record using cursor. A bug fix for the problem has been pushed to 5.0.4.
[11 Apr 2005 4:00]
Paul DuBois
Noted in 5.0.4 changelog.
