BUG#8585 ndb_cache2  - When deleting from a cursor the m_rows_changed variable was not properly incremented to indicate that m_share->commit_count should be cleared at end of trans.